tests/ui/suggestions/many-type-ascription.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `:`
  --> $DIR/many-type-ascription.rs:2:14
   |
LL |     let _ = 0: i32;
   |              ^ expected one of `.`, `;`, `?`, `else`, or an operator
   |
   = note: type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>

error: aborting due to previous error

